--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,14 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <finalName>ConverterProject</finalName>
+ <build>
+  <plugin>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>3.0.0</version>
+  <configuration>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+  </configuration>
+</plugin>
+  <finalName>ConverterProject</finalName>
   </build>
 </project>
